--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
+                            <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="#about">Flights</a></li>
                             <li><a href="#contact">Hotels</a></li>
                             <li class="dropdown">
@@ -63,7 +63,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="datajson.html">Data</a>
                             </li>
                             <li><a href="contact.html">Contact us</a>
                             </li>
