--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#">About us</a>
+                                <a href="datajson.html">Data</a>
                             </li>
                             <li><a href="contact.html">Contact us</a>
                             </li>
